--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML advanced</title>
 </head>
 <body>
 
@@ -17,7 +17,50 @@
             <a href="">LINK</a>
             <a href="">LINK</a>
         </div>
+
+        <section>
+            <div>
+                <h1>TITLE</h1>
+                <p>3 WORDS</p>
+                <button>BUTTON</button>
+            </div>
+
+            <div>
+                <h2>TITLE</h2>
+
+                <div>
+                    <div>
+                        <img src="" alt="">
+                        <h3>NAME</h3>
+                        <p>SUB-TITLE</p>
+                    </div>
+
+                    <div>
+                        <img src="" alt="">
+                        <h3>NAME</h3>
+                        <p>SUB-TITLE</p>
+                    </div>
+
+                    <div>
+                        <img src="" alt="">
+                        <h3>NAME</h3>
+                        <p>SUB-TITLE</p>
+                    </div>
+
+                    <div>
+                        <img src="" alt="">
+                        <h3>NAME</h3>
+                        <p>SUB-TITLE</p>
+                    </div>
+                </div>
+
+            </div>
+        </section> 
     </header>
+
+    <main>
+        
+    </main>
     
 </body>
 </html>
