--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -8,6 +8,7 @@
 <body>
 
     <header>
+        <!-- HEADER -->
         <a href="">
             <img src="" alt="">
         </a>
@@ -18,6 +19,7 @@
             <a href="">LINK</a>
         </div>
 
+        <!-- BANNER -->
         <section>
             <div>
                 <h1>TITLE</h1>
@@ -60,6 +62,7 @@
 
     <main>
 
+        <!-- QUOTE -->
         <section>
 
             <div>
@@ -75,6 +78,7 @@
         
         </section>
 
+        <!-- VIDEOS -->
         <section>
 
             <h1>TITLE</h1>
@@ -170,6 +174,43 @@
                 </div>
     
             </div>
+
+        </section>
+
+        <!-- MEMBERSHIP -->
+        <section>
+
+            <h1>TITLE</h1>
+
+            <div>
+
+                <div>
+                    <img src="" alt="">
+                    <h2>TITLE</h2>
+                    <p>TEXT</p>
+                </div>
+
+                <div>
+                    <img src="" alt="">
+                    <h2>TITLE</h2>
+                    <p>TEXT</p>
+                </div>
+
+                <div>
+                    <img src="" alt="">
+                    <h2>TITLE</h2>
+                    <p>TEXT</p>
+                </div>
+
+                <div>
+                    <img src="" alt="">
+                    <h2>TITLE</h2>
+                    <p>TEXT</p>
+                </div>
+
+            </div>
+
+            <button>BUTTON</button>
 
         </section>
 
