--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -254,5 +254,35 @@
 
     </main>
     
+    <footer>
+
+        <div>
+
+            <div>
+
+                <div>
+                    <img src="" alt="">
+                </div>
+
+                <div>
+                    <a href="">
+                        <img src="" alt="">
+                    </a>
+                    <a href="">
+                        <img src="" alt="">
+                    </a>
+                    <a href="">
+                        <img src="" alt="">
+                    </a>
+                </div>
+
+            </div>
+
+            <p>Text</p>
+
+        </div>
+
+    </footer>
+
 </body>
 </html>
